Updated multiple components and pages, added new files

--- a/package.json
+++ b/package.json
@@ -50,16 +50,19 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
     "express": "latest",
-    "fs": "latest",
+    "express-validator": "^7.2.1",
+    "framer-motion": "^12.6.3",
+    "fs": "^0.0.1-security",
     "input-otp": "1.4.1",
     "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "latest",
-    "next": "15.1.0",
+    "next": "^15.3.0-canary.27",
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
     "path": "latest",
-    "pdfkit": "latest",
+    "pdfkit": "^0.16.0",
     "razorpay": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
