--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:backend": "node server.js",
     "seed": "node scripts/seed.js",
     "migrate:images": "node scripts/migrate_uploads_to_s3.js",
+    "fix:placeholders": "node scripts/set_placeholders.js --only-null",
+    "fix:placeholders:all": "node scripts/set_placeholders.js",
     "pm2": "pm2 start ecosystem.config.js && pm2 save",
     "lint": "next lint"
   },
